2014-05-29  Andy Buckley  <andy.buckley@cern.ch>

	* Change source name of analyticpdf example.

	* Adding a mini-constructor to PDF to make sure that _forcePos is
	set to a sane default value.

2014-05-28  Andy Buckley  <andy.buckley@cern.ch>

	* 6.1.2 release!

2014-05-28  James Ferrando <james.ferrando@glasgow.ac.uk>

	* Fix HWLHAPDF behaviour in pdfset

2014-05-27  Andy Buckley  <andy.buckley@cern.ch>

	* 6.1.1 release!

2014-05-26  James Ferrando <james.ferrando@glasgow.ac.uk>

	* Modify printout in PDFLIB backwards compatibility routine to
	avoid confusion for some HERWIG use cases

2014-05-22  Andy Buckley  <andy.buckley@cern.ch>

	* Adding warnings about mismatching alpha_s in reweighting, with a default tolerance of 5%.

2014-05-20  Andy Buckley  <andy.buckley@cern.ch>

	* Add LHAPDF/Reweighting.h with a few handy functions for doing 'naive' PDF reweighting.

2014-05-19  Andy Buckley  <andy.buckley@cern.ch>

	* Replace all internal uses of "foreach" with explicit BOOST_FOREACH until C++11.

2014-05-17  Andy Buckley  <andy.buckley@cern.ch>

	* Remigrate all NNPDF sets to remove duplicate Qmax points.

2014-05-10  Andy Buckley  <andy.buckley@cern.ch>

	* Adding initLHAPDF() and a few other do-nothing compatibility functions.

2014-04-25  Andy Buckley  <andy.buckley@cern.ch>

	* 6.1.0 release!

2014-04-24  Andy Buckley  <andy.buckley@cern.ch>

	* Return -1 for errorConfLevel on replica PDF sets.

	* Mapping uncertainty functions into Python.

2014-04-21  Andy Buckley  <andy.buckley@cern.ch>

	* Derive LHAPDF_VERSION_CODE integer using a Mac-safe sed regex.

2014-04-17  Andy Buckley  <andy.buckley@cern.ch>

	* Fix pdfsets.index parsing (column order) in lhapdf script.

	* Supporting the pkg-config type --cflags and --libs switches on
	lhapdf-config.

2014-04-16  Andy Buckley  <andy.buckley@cern.ch>

	* Adding an LHAPDF5 compatibility mode flag,
	Pythia6LambdaV5Compat, which sets all LambdaQCD common block